tests/ui/macros/macro-expansion-empty-span-147255.stderr
error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> $DIR/macro-expansion-empty-span-147255.rs:9:20
   |
LL |     println!("{}", x_str);
   |               --   ^^^^^ `()` cannot be formatted with the default formatter
   |               |
   |               required by this formatting parameter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
